gazjango/static/css/functions/functions.css
/******

Functions for stories in The Daily Gazette
Written on September 17, 2008
by Miles Skorpen

*******/

/**************************************

For conversion purposes from our WP version:
	[ All as classes ]
	blockquote => highlightBox center
	leftImage => imgLeft twentyfive
	rightImage => imgRIght twentyfive
	pullQuote => pullQuote left
	pullQuoteRight => pullQuote right
	images => imgRight twentyfive
	images50 => imgRight thirtyfive
	imagesLeft => imgLeft twentyfive
	imagesleft50 => imgLeft thirtyfive
	linkbar => linkBar
	quote => pullQuote left
	

**************************************/

/**************************************

IMAGE STYLES

**************************************/

#storyBox img {
	width: 100%;
}

.imgLeft {
	float: left;
	display: inline;
	overflow:hidden;
	margin: 10px 10px 10px 0px;
}

.imgRight {
	margin: 5px 0px 5px 5px;
	float: right;
}

.imgCenter {
	margin: 0 auto;
	padding: 5px;
}

.imgLeft p,.imgRight p,.imgCenter p {
	font-size: small;
	font-style: italic;
}

.imgLeft.author,.imgRight.author,.imgCenter.author {
	font-variant: small-caps;
}

.ten {
	width: 10%;
}

.twentyfive {
	width: 25%;
}

.thirtyfive {
	width: 35%;
}

.fourty {
	width: 40%;
}

.fifty {
	width: 50%;
}

.seventyfive {
	width: 75%;
}

.hundred {
	width: 100%;
}


/**************************************

TEXT BOX STYLES

**************************************/

.linkBar {
	width: 150px;
	background-color: #eeeeee;
	border-top: 2px solid #bbb;
	border-bottom: 2px solid #bbb;
}

.highlightBox {
	width: 80%;
	background-color: #a1e5ee;
	border: 1px solid #bbb;
}

.pullQuote {
	width: 100px;
	border-top: 2px solid #bbbbbb;
	padding: 2px;
}

/******************

Locate Text Boxes

*******************/

.left {
	float: left;
	display: inline;
	overflow:hidden;
	margin: 10px 10px 10px 0px;
}

.right {
	margin: 5px 0px 5px 5px;
	float: right;
}

.center {
	margin: 0 auto;
	padding: 5px;
}

/******************

Organization of Text

*******************/

ul {
	
}

ul li {
	
}

